--- a/src/assets/scss/custom/_content.scss
+++ b/src/assets/scss/custom/_content.scss
@@ -13,6 +13,17 @@
         padding-right: 0 !important;
     }
 
+    .navbar-main {
+        left: 0;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        background-color: #ffffff;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        box-shadow: 0 0px 7px 1px #00000040;
+    }
+
     // Container
     .container-fluid {
         @include media-breakpoint-up(md) {
