--- a/src/assets/scss/core/footers/_footer.scss
+++ b/src/assets/scss/core/footers/_footer.scss
@@ -101,7 +101,7 @@
 
 
 .footer-main {
-    background-color: #191919;
+    background-color: $t-black;
     .col-footer .heading {
         color: $white;
     }
@@ -109,18 +109,18 @@
 
 .nav-footer-main {
     .title {
-        color: #00b414;
+        color: $t-green;
     }
     ul {
         list-style: none;
         padding: 0px;
         li {
             padding: 8px 14px;
-            color: white;
+            color: $white;
             a {
                 cursor: pointer;
                 &:hover {
-                    color:#00b414!important;
+                    color:$t-green!important;
                 }
             }
         }
@@ -129,13 +129,13 @@
 
 .contact-footer-main {
     .title {
-        color: #00b414;
+        color: $t-green;
     }
     .subscribe{
         
     }
     .contact{
-        color: white;
+        color: $white;
         .item{
 
             i{
@@ -153,18 +153,19 @@
                     width: 40px;
                     height: 40px;
                     line-height: 38px;
-                    border: 2px solid #f5f5f5;
+                    border: 2px solid $white;
                     border-radius: 50%;
-                    color: #000000;
+                    color: $t-gray;
                     text-align: center;
                     text-decoration: none;
-                    background: #dadada;
-                    box-shadow: 0 0 3px grey;
+                    background: $white;
+                    box-shadow: 0 0 3px $t-gray;
                     font-size: 20px;
                     font-weight: bold;
                     &:hover{
-                        background: #00b423!important;
-                        color: #ffffff!important;
+                        color: $t-green!important;
+                        @include box-shadow($btn-hover-box-shadow);
+                        transform: translateY($btn-hover-translate-y);
                     }
                 }
             }
