--- a/src/assets/scss/custom/_main.scss
+++ b/src/assets/scss/custom/_main.scss
@@ -1,14 +1,7 @@
 .categories-box{
     .Header{
         .title{
-            color: $t-green;
-        }
-        .more{
-            color: $t-green;
-            &:hover{
-                cursor: pointer;
-                color: $t-yellow;
-            }
+            color: $t-black;
         }
     }
     .content{
@@ -19,6 +12,7 @@
                 width: 100%;
             }
             .title{
+                z-index: 3;
                 position: absolute;
                 bottom: 15px;
                 left: 0px;
@@ -35,12 +29,202 @@
                 }
                 
             }
+            .overlay{
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 2;
+                background-color: rgba($t-black, .6);
+                opacity: .7;
+            }
         }
     }
+}
+
+.categories-box-dark{
+    background-color: $t-black;
+    // padding: 2rem 5rem;
+    .Header{
+        .title{
+            color: $white;
+        }
+    }
+    .content{
+        .item{
+            position: relative;
+            img{
+                border-radius: 10px;
+                width: 100%;
+            }
+            .title{
+                z-index: 3;
+                position: absolute;
+                bottom: 15px;
+                left: 0px;
+                color: $white;
+                padding: 0 0 0 24px;
+                &:before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0px;
+                    background: $t-green;
+                    width: 18px;
+                    height: 20px;
+                }
+                
+            }
+            .overlay{
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 2;
+                background-color: rgba($t-black, .6);
+                opacity: .7;
+            }
+        }
+    }
+}
+
+.features-box{
+    .title{
+        color: $t-black;
+    }
+    .content{
+
+        .item{
+            .body{
+                text-align: center;
+                img{
+                    width: 128px;
+                }
+                .title{
+                    font-size: 1.1rem;
+                }
+                .desc{
+                    font-size: 0.8rem;
+                }
+            }
+        }
+    }
+
 }
 
 .header-bg{
     background-repeat: no-repeat!important;
     background-size: cover!important;
     height: 600px;
+}
+
+.main-service-navigation {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: $white;
+    border-top-right-radius: 0.375rem;
+    border-top-left-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
+    box-shadow: 0 2px 6px 0px #00000040;
+    .content{
+        ul{
+            list-style: none;
+            padding: 0px;
+            li{
+                float: left;
+                padding: 8px 30px;
+                &.active {
+                    border-bottom: solid 3px $t-green;
+                    color: $t-green;
+                    .title{
+                        color: $t-green;
+                    }
+                }
+                &:hover{
+                    color: $t-green;
+                    cursor: pointer;
+                    .title{
+                        color: $t-green;
+                    }
+                }
+                span{
+                    color: #9E9E9E;
+                }
+                &.submit{
+                    float: right;
+                    background-color: $t-green;
+                    border-bottom: solid 3px $t-green;
+                    color: $white;
+                    border-top-right-radius: 0.375rem;
+                    border-bottom-right-radius: 0.375rem;
+                    text-align: center;
+                    cursor: pointer;
+                    height: 67px;
+                    line-height: 50px;
+                    font-size: 1.5rem;
+                    padding: 8px 22px;
+                    &:hover{
+                        color: $t-yellow;
+                        border-bottom: solid 3px $t-green;
+                        @include box-shadow($btn-hover-box-shadow);
+                    }
+                }
+            }
+        }
+    }
+}
+
+@include media-breakpoint-down(sm) {
+    .main-service-navigation {
+        border-radius: 0.375rem;
+        .content{
+            ul{
+                list-style: none;
+                padding: 0px;
+                li{
+                    padding: 8px 30px;
+                    display: block;
+                    width: 290px;
+                    float: none;
+                    text-align: left;
+                    .title{
+                        margin-left: 1rem;
+                        display: inline;
+                    }
+                    &.active {
+                        border-left: solid 6px #00b400;
+                        border-bottom: none!important;
+                        color: $t-green;
+                        padding-left: 24px;
+                        .title{
+                            color: $t-green;
+                        }
+                    }
+                    span{
+                        color: #9E9E9E;
+                    }
+                    &.submit{
+                        float: right;
+                        background-color: $t-green;
+                        border-bottom: solid 3px $t-green;
+                        color: $white;
+                        border-bottom-right-radius: 0.375rem;
+                        border-bottom-left-radius: 0.375rem;
+                        border-top-right-radius: 0!important;
+                        text-align: center;
+                        height: 50px;
+                        line-height: 32px;
+                        font-size: 1.2rem;
+                        padding: 8px 22px;
+                        i{
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
