--- a/src/assets/scss/custom/_service.scss
+++ b/src/assets/scss/custom/_service.scss
@@ -15,33 +15,189 @@
             padding: 0px;
             li{
                 float: left;
-                padding: 12px 30px;
-                &.active {
-                    border-bottom: solid 3px $t-green;
-                    span{
-                        color: $t-green;
-                    }
+                padding: 18px 30px;
+                margin: 0 30px;
+                height: 60px;
+                .selected-item{
+                    display: none;
                 }
-                span{
+                .detail{
                     color: #9E9E9E;
+                    position: relative;
+                    top: -20px;
+                    left: 22px;
                 }
                 &.submit{
                     float: right;
-                    background-color: $t-green;
-                    border-bottom: solid 3px $t-green;
-                    color: $white;
+                    color: $t-green;
                     border-top-right-radius: 0.375rem;
                     border-bottom-right-radius: 0.375rem;
                     width: 100px;
                     text-align: center;
                     cursor: pointer;
+                    font-size: 1.2rem;
+                    margin: 0;
                     &:hover{
                         color: $t-yellow;
-                        border-bottom: solid 3px $t-green;
-                        @include box-shadow($btn-hover-box-shadow);
+                        background-color: $t-green;
+                    }
+                }
+                &.active {
+                    i{
+                        color: $t-green;
+                    }
+                    .detail{
+                        .title{
+                            color: $t-green;
+                        }
+                        .selected-item{
+                            display: none;
+                        }
+                    }
+                }
+                &.done {
+                    i{
+                        color: $t-green;
+                    }
+                    .detail{
+                        .title{
+                            font-size: 0.6rem;
+                            color: $t-gray;
+                            display: block;
+                        }
+                        .selected-item{
+                            color: $t-green;                            
+                            display: block;
+                        }
                     }
                 }
             }
+        }
+    }
+    &.fix{
+        position: fixed;
+        top: -48px;
+        left: 0px;
+        z-index: 1005;
+    }
+}
+
+@include media-breakpoint-down(md) {
+    .service-navigation {
+        .content{
+            ul{
+                li{
+                    padding: 18px 25px;
+                    margin: 0 4px;
+                }
+            }
+        }
+    }
+}
+@include media-breakpoint-down(sm) {
+    .service-navigation {
+        .content{
+            ul{
+                li{
+                    padding: 18px 14px;
+                    margin: 0 4px;
+                }
+            }
+        }
+    }
+}
+
+@include media-breakpoint-down(xs) {
+    .service-navigation {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        word-wrap: break-word;
+        background-color: $white;
+        border-top-right-radius: 0.375rem;
+        border-top-left-radius: 0.375rem;
+        border-bottom-left-radius: 0.375rem;
+        border-bottom-right-radius: 0.375rem;
+        box-shadow: 0 2px 6px 0px #00000040;
+        .content{
+            ul{
+                list-style: none;
+                padding: 0px;
+                li{
+                    width: 100%;
+                    display: -webkit-inline-box;
+                    padding: 8px 14px;
+                    margin: 0;
+                    height: 50px;
+                    border-bottom: solid 1px $gray-400;
+                    i{
+                        position: relative;
+                        top: 7px;
+                        left: 0px;
+                    }
+                    .selected-item{
+                        display: none;
+                    }
+                    .detail{
+                        color: #9E9E9E;
+                        position: relative;
+                        top: 7px;
+                        left: 12px;
+                    }
+                    &.submit{
+                        float: right;
+                        color: $white;
+                        border-top-right-radius: 0;
+                        border-bottom-right-radius: 0.375rem;
+                        border-bottom-left-radius: 0.375rem;
+                        width: 100%;
+                        text-align: center;
+                        cursor: pointer;
+                        font-size: 1.2rem;
+                        margin: 0;
+                        border: none;
+                        background-color: $t-green;
+                        padding: 10px 14px;
+                        i{
+                            display: none;
+                        }
+                        &:hover{
+                            color: $t-yellow;
+                            background-color: $t-green;
+                        }
+                    }
+                    &.done {
+                        i{
+                            color: $t-green;
+                        }
+                        .detail{
+                            width: 90%;
+                            display: block;
+                            .title{
+                                font-size: 0.8rem;
+                                color: $white;
+                                display: block;
+                                position: absolute;
+                                top: 1px;
+                                right: 0px;
+                                background: $t-gray;
+                                padding: 2px 12px;
+                                border-radius: 8px;
+                            }
+                            .selected-item{
+                                color: $t-green;                            
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        &.fix{
+            position: relative;
+            top: 0px;
+            left: 0px;
         }
     }
 }
@@ -67,10 +223,10 @@
 }
 
 .service-items{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    word-wrap: break-word;
+    // position: relative;
+    // display: flex;
+    // flex-direction: column;
+    // word-wrap: break-word;
     background-color: $white;
     border-radius: 0.375rem;
     box-shadow: 0 1px 6px 0px #00000040;
