--- a/src/assets/scss/custom/_main.scss
+++ b/src/assets/scss/custom/_main.scss
@@ -124,7 +124,6 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: $white;
     border-top-right-radius: 0.375rem;
     border-top-left-radius: 0.375rem;
     border-bottom-right-radius: 0.375rem;
@@ -136,6 +135,12 @@
             li{
                 float: left;
                 padding: 8px 30px;
+                background-color: $white;
+                border-bottom: solid 3px $white;
+                .title{
+                    margin-bottom: 0!important;
+                    margin-top: 0.5em!important;
+                }
                 &.active {
                     border-bottom: solid 3px $t-green;
                     color: $t-green;
@@ -177,6 +182,10 @@
     }
 }
 
+.main-cure-drop{
+    width: 448px;
+}
+
 @include media-breakpoint-down(sm) {
     .main-service-navigation {
         border-radius: 0.375rem;
@@ -187,7 +196,8 @@
                 li{
                     padding: 8px 30px;
                     display: block;
-                    width: 290px;
+                    width: 100%;
+                    display: -webkit-inline-box;
                     float: none;
                     text-align: left;
                     .title{
@@ -219,6 +229,7 @@
                         line-height: 32px;
                         font-size: 1.2rem;
                         padding: 8px 22px;
+                        width: 100%;
                         i{
                             display: none;
                         }
@@ -226,5 +237,11 @@
                 }
             }
         }
+    }
+
+    .main-cure-drop{
+        display: block;
+        width: 100%;
+        display: -webkit-inline-box;
     }
 }
