--- a/src/assets/scss/custom/_main.scss
+++ b/src/assets/scss/custom/_main.scss
@@ -245,3 +245,19 @@
         display: -webkit-inline-box;
     }
 }
+
+
+.dropdown-menu-mini {
+    box-shadow: none;
+    left: -5px;
+    min-width: 40px!important;
+    padding: 0px;
+    .dropdown-item{
+        width: auto;
+        padding-left: 0;
+        padding-right: 0;
+        &:hover{
+            background: transparent;
+        }
+    }
+}
