--- a/src/assets/scss/custom/_service.scss
+++ b/src/assets/scss/custom/_service.scss
@@ -240,3 +240,137 @@
     border-radius: 0.375rem;
     box-shadow: 0 1px 6px 0px #00000040;
 }
+
+.hospital-detail-box{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    background-color: $white;
+    border-radius: 0.375rem;
+    box-shadow: 0 1px 6px 0px #00000040;
+    .header{
+        .title{
+            color: $t-gray;
+        }
+        .rate-box{
+            .rate{
+                color: $t-yellow;
+            }
+            .rate-point{
+                color: $t-gray;
+            }
+        }
+    }
+    .body{
+        .content{
+            .item{
+                i{
+                    margin: auto 0;
+                    font-size: 1.3rem;
+                }   
+                .item-title{
+                    margin: auto 0;
+                }
+                .facility{
+                    i{
+                        font-size: inherit;
+                        color: $t-green;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+.ant-carousel .slick-slide {
+    // position: relative;
+    // display: flex;
+    // flex-direction: column;
+    // word-wrap: break-word;
+    background-color: $t-gray;
+    border-radius: 0.375rem;
+    box-shadow: 0 1px 6px 0px #00000040;
+
+    text-align: center;
+    max-height: 246px;
+    overflow: hidden;
+  }
+  
+  .ant-carousel .slick-slide h3 {
+    color: #fff;
+  }
+
+  .slick-dots{
+      li{
+        button{
+            height: 7px!important;
+        }
+      }
+  }
+
+  .circle-progress{
+      width: 74px;
+      margin: auto;
+  }
+
+  .mini-comment-box{
+      .item{
+          img{
+            width: 48px;
+            height: 48px;
+            border-radius: 50%;
+          }
+          .content{
+              .title{
+                margin-bottom: .2em;
+                small{
+                    color: $t-gray;
+                }
+              }
+              .desc{
+                font-size: .7rem;
+                line-height: 1.3;
+                text-align: justify;
+              }
+          }
+      }
+  }
+
+  .physicians-box{
+    .Header{
+        .title{
+            color: $t-black;
+        }
+    }
+    .content{
+        .physician-card{
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            word-wrap: break-word;
+            background-color: $white;
+            border-radius: 0.375rem;
+            box-shadow: 0 1px 6px 0px #00000040;
+            img{
+                width: 94px;
+                height: 94px;
+                border-radius: 50%;
+                margin: auto;
+            }
+            .name{
+                color: $t-black;
+            }
+            .expertise{
+                color: $t-green;
+            }
+            .rate{
+                i{
+                    color: $t-yellow;
+                }
+            }
+
+        }
+    }
+  }
