--- a/src/assets/scss/custom/_main.scss
+++ b/src/assets/scss/custom/_main.scss
@@ -37,6 +37,7 @@
                 z-index: 2;
                 background-color: rgba($t-black, .6);
                 opacity: .7;
+                border-radius: 10px;
             }
         }
     }
