--- a/src/assets/scss/custom/_main.scss
+++ b/src/assets/scss/custom/_main.scss
@@ -125,9 +125,9 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    border-top-right-radius: 0.375rem;
-    border-top-left-radius: 0.375rem;
-    border-bottom-right-radius: 0.375rem;
+    // border-top-right-radius: 0.375rem;
+    border-radius: 0.375rem;
+    // border-bottom-right-radius: 0.375rem;
     box-shadow: 0 2px 6px 0px #00000040;
     .content{
         ul{
@@ -138,6 +138,10 @@
                 padding: 8px 30px;
                 background-color: $white;
                 border-bottom: solid 3px $white;
+                &:first-child {
+                    border-top-left-radius: 0.375rem;
+                    border-bottom-left-radius: 0.375rem;
+                }
                 .title{
                     margin-bottom: 0!important;
                     margin-top: 0.5em!important;
@@ -168,7 +172,7 @@
                     border-bottom-right-radius: 0.375rem;
                     text-align: center;
                     cursor: pointer;
-                    height: 67px;
+                    height: 66px;
                     line-height: 50px;
                     font-size: 1.5rem;
                     padding: 8px 22px;
