--- a/src/assets/scss/custom/_service.scss
+++ b/src/assets/scss/custom/_service.scss
@@ -229,13 +229,32 @@
             }
         }
     }
+    .navigation-steps{
+        list-style: none;
+        padding-left: 0px!important;
+        li{
+            padding: 12px 0px 12px 0px;
+            color: $t-gray;
+            display: flex !important;
+            flex-basis: auto;
+            i{
+                margin-left: auto !important;
+                line-height: unset;
+            }
+            &:hover{
+                color: $t-green;
+                cursor: pointer;
+            }
+            &.active{
+                color: $t-green;
+                cursor: pointer;
+                font-weight: 600;
+            }
+        }
+    }
 }
 
 .service-items{
-    // position: relative;
-    // display: flex;
-    // flex-direction: column;
-    // word-wrap: break-word;
     background-color: $white;
     border-radius: 0.375rem;
     box-shadow: 0 1px 6px 0px #00000040;
@@ -294,7 +313,7 @@
     box-shadow: 0 1px 6px 0px #00000040;
 
     text-align: center;
-    max-height: 246px;
+    max-height: 341px;
     overflow: hidden;
   }
   
@@ -311,7 +330,7 @@
   }
 
   .circle-progress{
-      width: 74px;
+      width: 68px;
       margin: auto;
   }
 
@@ -440,4 +459,12 @@
             }
         }
     }
+  }
+
+  .ol-attribution{
+      display: none!important;
+  }
+
+  #map {
+    height: 100px;
   }
