--- a/src/assets/scss/custom/_service.scss
+++ b/src/assets/scss/custom/_service.scss
@@ -283,6 +283,14 @@
     }
     .body{
         .content{
+            .description{
+                white-space: pre-line;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-height: 108px;
+                line-height: 1.6rem;
+                text-align: justify;            
+            }
             .item{
                 i{
                     margin: auto 0;
@@ -304,16 +312,11 @@
 
 
 .ant-carousel .slick-slide {
-    // position: relative;
-    // display: flex;
-    // flex-direction: column;
-    // word-wrap: break-word;
     background-color: $t-gray;
     border-radius: 0.375rem;
     box-shadow: 0 1px 6px 0px #00000040;
-
     text-align: center;
-    max-height: 341px;
+    max-height: 321px;
     overflow: hidden;
   }
   
@@ -350,7 +353,11 @@
               }
               .desc{
                 font-size: .7rem;
-                line-height: 1.3;
+                white-space: pre-line;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-height: 60px;
+                line-height: 1.3rem;
                 text-align: justify;
               }
           }
