--- a/src/assets/css/argon-dashboard-react.css
+++ b/src/assets/css/argon-dashboard-react.css
@@ -15684,7 +15684,7 @@ textarea[resize="horizontal"] {
 }
 
 .icon-xl + .icon-text {
-    width: calc(100% - $icon-size-xl - 1);
+    /* width: calc(100% - $icon-size-xl - 1); */
 }
 
 .icon-lg {
@@ -15697,7 +15697,7 @@ textarea[resize="horizontal"] {
 }
 
 .icon-lg + .icon-text {
-    width: calc(100% - $icon-size-lg - 1);
+    width: calc(100% - 1);
 }
 
 .icon-sm {
@@ -15710,7 +15710,7 @@ textarea[resize="horizontal"] {
 }
 
 .icon-sm + .icon-text {
-    width: calc(100% - $icon-size-sm - 1);
+    /* width: calc(100% - $icon-size-sm - 1); */
 }
 
 .icon-shape {
